notizia_gen/tests/compile_fail/invalid_meta_path.rs
use notizia_gen::Task;

#[derive(Clone, Debug)]
struct Message;

// Test #[task] without parameters - should fail with "requires parameters"
#[derive(Task)]
#[task]
struct MyTask;

fn main() {}
